# hpc-fiddle2

./: .gitignore  CMakeLists.txt  Dockerfile.CLION  README.md  main.cpp
src/data/: CMakeLists.txt  data.cpp  data.hpp
test/data/: CMakeLists.txt  data.test.cpp
